FIX: PermormanceTest work properly